--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <section>
         <nav class="flex flex-col md:flex-row justify-around">
-            <h2 class="text-white text-xl font-bold">e-sports</h2>
+            <h2 class="text-white text-xl font-bold">E-sports</h2>
             <div >
                 <ul class="flex flex-row gap-2">
                     
