--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
         <div >
             <ul class="flex flex-row gap-2">
                 
-                <button class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs">Home</button>
-                <button class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs">Service</button>
-                <a class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="contact.html">FAQ & Help</a>
-                <a class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="about.html">About us</a>
-                <a class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="login.html">Login</a>
+              <a button class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="index.html">Home</a>
+                    <a button class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="service.html">Service</a>
+                    <a button class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="contact.html">FAQ & Help</a>
+                    <a button class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="about.html">About us</a>
+                    <a button class="btn bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-xs" href="login.html">Login</a>
             </ul>
         </div>
     </nav>
